# pv-forecast

./: Makefile  README.md  pyproject.toml
src/: main.py  networks.py
src/data/: data.csv  data_9000.csv  predictions_LSTM.csv  predictions_MLP.csv
src/utils/: config.json  processing.py  visualization.py
